--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
     content: 'PORTFOLIO';
     color: black;
-    
+
 }
 
 .naslov {
@@ -11,14 +11,22 @@
     margin-bottom: 15vh;
 }
 
-.top h4,h1,button {
+.top h4,
+h1,
+    {
     margin-top: 20px;
 }
 
 .bel {
-    color: black;
+    color: rgb(253, 45, 45);
     width: 150px;
     background-color: white;
     border: none;
     border-radius: 50px;
+    margin-top: 20px;
+}
+
+.bel:hover {
+    background: grey;
+    color: red;
 }
