--- a/index.css
+++ b/index.css
@@ -24,11 +24,32 @@
 }
 
 .slika {
-    opacity: 1;
-    cursor: pointer;
+    position: relative;
 }
 
-.slika:hover .overlay {
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: white;
+  }
+  
+  .slika:hover .overlay {
     opacity: 1;
-    cursor: pointer;
+  }
+  
+  .text {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
   }
